tests/fixtures/guardrails/invalid/webhooks-nested-index-page-imports-domain/app/routes/webhooks/index.tsx
import { enqueueWebhookInboxEvent } from "~/domain/webhooks";

export function loader() {
  return enqueueWebhookInboxEvent();
}
